# source-code-esp32

./: CMakeLists.txt  README.md  ReadMeYocto.txt  arm_CMakeCCompiler.cmake  dataFile.txt  gptimer_example_main.c  helloworld_0.1.bb  knowledgeLinux.txt  linuxKnowledge.txt  readFile.c  readTherm.c  simpleDriver.c  sun8i-h3-w1-gpio.dts  toolchain.cmake
IPC_socket/: clientSocket.c  recvMsgProcess.c  sendMsgProcess.c  thread.c
learnAsm/: boot.asm
testTimer/: CMakeLists.txt
testTimer/main/: CMakeLists.txt  test_timer_group_example_main.c
uart/: new1mainCswserial.c  sw_serial.h  uart_echo_example_main.c
udp_server/: sdkconfig  sdkconfig.ci  sdkconfig.defaults  sdkconfig.defaults.esp32  udp_server_old.c
udp_server/main/: CMakeLists.txt  blufi_example_main.c  udp_server.c  udp_server_original.c
